feat: add daemon logging, token bypass mode, and YAML config
This commit adds several important improvements to the OIDC authenticator:

**Daemon Mode Logging:**
- Change log file location from project directory to ~/.oidc-authenticator.log
- Add startup logging with configuration details
- Log all HTTP requests to help debug authentication flows
- Update CLI to show log file location in start/status commands
- Add comprehensive logging documentation

**Token Bypass Mode:**
- Allow providing existing OIDC tokens to skip authentication flow
- Useful for development, testing, and CI/CD environments
- Supports both accessToken and idToken configuration
- Add comprehensive token bypass documentation

**Configuration Improvements:**
- Migrate from config.json to config.yaml for better readability
- Add js-yaml dependency for YAML parsing
- Update configuration examples and documentation
- Support modular configuration structure (callback, backend sections)

**Documentation:**
- Add comprehensive docs/ directory with multiple guides
- Document token bypass mode usage and implementation
- Add Backstage integration examples
- Include browser extension design concepts
- Add auto-login and auto-fill implementation guides

**Bug Fixes:**
- Fix daemon subprocess not passing configuration properly
- Ensure logging works when stdio is set to 'ignore'
- Properly handle token configuration in daemon mode

Closes #[issue-number]

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "js-yaml": "^4.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/open-service-portal/oidc-authenticator.git"
