--- a/config.example.yaml
+++ b/config.example.yaml
@@ -7,15 +7,24 @@ clientId: "your-client-id"
 organizationId: "org_xxxxx"  # Optional: for Auth0 multi-tenant
 scopes: "openid profile email offline"
 
-# Local Callback Server
-callback:
+# Port Configuration
+# daemon.port: Port for persistent daemon mode (default: 8000)
+# cli.port: Port for one-off CLI mode (default: 8001)
+# Using different ports prevents conflicts when running both modes
+daemon:
   port: 8000
+cli:
+  port: 8001
 
-# Backend Integration
-# Where to send tokens after successful authentication
+# Backend Integration (Optional - for legacy direct-send mode)
+# Modern approach: Use ?mode=return-tokens and let frontend send tokens
+# Legacy approach: Configure backend and daemon sends directly
 backend:
   url: "http://localhost:7007"
   endpoint: "/api/cluster-auth/tokens"  # Token submission endpoint
+  secret: "your-shared-secret-here"      # Auth secret (required if using backend URL)
+  # Generate a strong secret: openssl rand -hex 32
+  # Backend must verify this secret in X-Auth-Secret header
 
 # Token Bypass (Optional - skips OIDC flow if provided)
 # Provide both access_token and id_token from a previous OIDC flow
